# log-insight

./: .gitignore  CLAUDE.md  breakpoint-register.md  config.toml  intent.txt  plan.md  pyproject.toml  spec.md
.skills/breakpoint/: SKILL.md
log_insight/: __init__.py  app.py  collect.py  config.py  db.py  normalize.py  queries.py
log_insight/collectors/: __init__.py  journald.py
log_insight/templates/: index.html
tests/: test_app.py  test_collect.py  test_config.py  test_db.py  test_journald.py  test_normalize.py  test_queries.py
tests/fixtures/: journald_probe_notes.md  journald_sample.jsonl
