[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "log-insight"
version = "0.1.0"
description = "Internal tool to collect a Linux server's logs and search them over a localhost web UI (MVP)."
requires-python = ">=3.11"  # tomllib; PEP 604 unions
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = ["pytest>=8", "httpx>=0.27"]  # httpx powers fastapi.testclient.TestClient

[tool.setuptools.packages.find]
include = ["log_insight*"]

[tool.setuptools.package-data]
log_insight = ["templates/*.html"]

[tool.pytest.ini_options]
testpaths = ["tests"]
